[package]
name = "resonate"
version = "0.1.0"
edition = "2024"

[dependencies]
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "aac"] }
rubato = "0.14"
dasp = "0.11"
rustfft = "6.2.0"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros"
] }

tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 