[package]
name = "resonate"
version = "0.1.0"
edition = "2024"

[dependencies]
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "aac"] }
rubato = "0.14"
rustfft = "6.2.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros"
] }
rayon = "1"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
axum = { version = "0.8.8", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
anyhow = "1.0.101"

rdkafka = { version = "0.36", features = ["tokio"] }
futures = "0.3"
aws-config = "1"
aws-sdk-s3 = "1"
chrono = "0.4.43"
